--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
+    "dev": "nodemon index.js",
+    "start": "node index.js",
     "reverse:db": "sequelize-auto -o ./models -d laundry-app -h localhost -u root -p 3306 -x 11111111 -e mysql"
   },
   "author": "Achmad Rendra Artama",
