--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "reverse:db": "sequelize-auto -o ./models -d laundry-app -h localhost -u root -p 3306 -x 11111111 -e mysql"
+    "reverse:db": "sequelize-auto -o ./models -d laundry-app -h localhost -u root -p 3306 -x 11111111 -e mysql",
+    "reverse:db:deploy": "sequelize-auto -o ./models -d railway -h containers-us-west-77.railway.app -u root -p 6563 -x BpALGPFW2VvV1ZCNQ99r -e mysql"
   },
   "author": "Achmad Rendra Artama",
   "license": "ISC",
